fixed overflow historyPWrapped

--- a/CSS/historyArea.css
+++ b/CSS/historyArea.css
@@ -30,6 +30,7 @@
     border: 1px solid rgb(32, 30, 30);
     border-radius: 17px;
     display: inline-block;
+    overflow: hidden;
 }
 
 .historyHeaderDiv{
